# pi-calculus

./: .gitignore  Makefile  README.md  consumption.c  counting.c  pi-calculus.cabal  pi.vim  runtime.c  sandbox  stack.yaml  test.c
examples/: add.pi  add_compact.pi  cat.pi  cat_compact.pi  deadlock.pi  loop.pi  loop_faulty.pi
runtime/: Makefile  gt_switch.s  runtime.c
runtime/tests/: consumption.c  counting.c  counting_alloca.c  fork_scanf.c  loops.c  read_only.c
scrap/: gt.s  test128.c  testregister.c  testregister.s
src/: Main.hs  Process.hs  consumption.c  counting.c  gt_switch.s  runtime.c
