cabal-version: 1.12

name:           pi-calculus
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/pi-calculus#readme>
homepage:       https://github.com/githubuser/pi-calculus#readme
bug-reports:    https://github.com/githubuser/pi-calculus/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/githubuser/pi-calculus

executable pi-calculus-exe
  main-is: Main.hs
  other-modules:
      Paths_pi_calculus,
      Process
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      containers, mtl, sbv, recursion-schemes, deriving-compat,
      transformers, dlist, megaparsec, process
  default-language: Haskell2010
  default-extensions:
      LambdaCase, DeriveFunctor, DeriveFoldable, DeriveTraversable,
      PatternSynonyms, EmptyCase, ViewPatterns, ScopedTypeVariables,
      TypeOperators, GeneralizedNewtypeDeriving, TemplateHaskell, TypeFamilies,
      FlexibleContexts, TupleSections, OverloadedStrings,
      TypeSynonymInstances, FlexibleInstances, StandaloneDeriving
